[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keybinds"
version = "1.0.0"
description = "Flexible and high-performance keyboard & mouse hotkeys for Windows"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "echolane"},
]
keywords = ["hotkeys", "keyboard", "mouse", "windows", "winput", "hooks", "keybinds"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "License :: OSI Approved :: MIT License",

  "Operating System :: Microsoft :: Windows",

  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System",
  "Topic :: Utilities",

  "Intended Audience :: Developers",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.4",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
keybinds = ["winput/LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py39"

[project.urls]
Homepage = "https://github.com/echolane/keybinds"
Repository = "https://github.com/echolane/keybinds"
Issues = "https://github.com/echolane/keybinds/issues"
