[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keybinds"
version = "1.3.1"
description = "Flexible global keyboard & mouse hotkeys for Windows"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
  {name = "echolane"},
]
keywords = ["hotkeys", "keyboard", "mouse", "windows", "winput", "hooks", "keybinds"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "License :: OSI Approved :: MIT License",

  "Operating System :: Microsoft :: Windows",

  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System",
  "Topic :: Utilities",

  "Intended Audience :: Developers",
]
dependencies = [
  "typing_extensions>=4.0; python_version < \"3.8\"",
]

[project.optional-dependencies]
test = [
  "pytest>=7.4,<8; python_version < '3.8'",
  "pytest>=8,<9; python_version >= '3.8'",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
keybinds = ["winput/LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py37"

[project.urls]
Homepage = "https://github.com/echolane/keybinds"
Repository = "https://github.com/echolane/keybinds"
Issues = "https://github.com/echolane/keybinds/issues"
